# warden

./: .envrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml  update-flake.yaml
nix/: docker.nix  package.nix
src/: main.py  main.rs
src/checks/: build.py  build.rs  deadnix.rs  hammering.rs  lint.rs  mod.rs  statix.rs
src/tests/: mod.rs  passthru.rs
