[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warden"
dynamic = ["version"]
description = "A quick description of my project"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
warden = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["checks"]
py-modules = ["main"]
